sample/misc/error/eval_wdt_cell.bfr
codegen [
  $build {
    arr: array(3) { x }
  } in
  + arr
]